social icons, fonts and spacing to fix

--- a/resume/styles.css
+++ b/resume/styles.css
@@ -65,6 +65,10 @@ body{
 
 }
 
+.nav-link{
+    color: #fff !important;
+}
+
 #menu .navbar-container { padding-top: 1%; margin-left: auto; margin-right: auto; max-width: 95%; height: 100%; padding-top: 1.2%; }
 .navbar-container .navbar .navbar-brand { font-size: 2em; }
 
@@ -95,6 +99,7 @@ body{
 /*--------Resume container ------*/
 .container{
   background-color: #fff;
+  margin-top: 15%;
 }
 
 
